# XSD2SHACL

./: .gitignore  CITATION.cff  README.md  RINF.xsd.shape.ttl  XSDtoSHACL.py  XSDtoSHACL_old.py  example.xsd.shape.ttl  main.py  pyproject.toml  requirements.txt  test.xsd  test.xsd.shape.ttl  xsd.example.xml
comparasion/: all.xsd.shex.shape.ttl
comparison/: README.md  attributeGroup.xsd  attributeGroup.xsd.shape.ttl  attributes.xsd.shape.ttl  attributes2.xsd  attributes2.xsd.shape.ttl  choice.xsd  choice.xsd.shape.ttl  complexType_elementonlyContent.xsd  complexType_elementonlyContent.xsd.shape.ttl  complexType_emptyContent.xsd  complexType_emptyContent.xsd.shape.ttl  complexType_mixedContent.xsd  complexType_simpleContent.xsd  complexType_simpleContent.xsd.shape.ttl  extension.xsd  extension.xsd.shape.ttl  facets.xsd  facets.xsd.shape.ttl  group.xsd  group.xsd.shape.ttl  pos.xsd.shape.ttl  restriction.xsd  restriction.xsd.shape.ttl  sequence.xsd  sequence.xsd.shape.ttl  simpleType_builtin.xsd  simpleType_builtin.xsd.shape.ttl  simpleType_userdefined.xsd  student.xsd.shape.ttl  union.xsd  union2.xsd  union2.xsd.shape.ttl  union3.xsd  union3.xsd.shape.ttl
evaluation/: enumeration.xml.shape.ttl  example.xml  example.xml.shape.ttl  extension.simple.xml  sequence.xml.shape.ttl  student.xsd  union.xml  union.xml.shape.ttl
post_adjustment/: adjustment_RINF.py  adjustment_TED.py  main.py  metrics.py  utils.py
src/: XSDtoSHACL.py  XSDtoSHACL_0810.py  XSDtoSHACL_alignedShEx.py  XSDtoSHACL_old.py  adjustment.py  adjustment_RINF.py  adjustment_TED.py  metrics.py  utils.py  (+1 more)
(+188 files in other folders)
